# WebSockets

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  output.txt
include/: DataParser.hpp  SafeQueue.hpp  WebSocket.hpp
src/: DataParser.cpp  WebSocket.cpp  main.cpp
test/: test.cpp
